Bug 846329 - Fix decodeAudioData to decode all channels and not only the first one; r=padenot